# Finrag--mcp

./: README.md  main.py  pyproject.toml
.qdrant_local/: meta.json
.qdrant_local/collection/finrag_engineering/: storage.sqlite
.qdrant_local/collection/finrag_finance/: storage.sqlite
.qdrant_local/collection/finrag_general/: storage.sqlite
.qdrant_local/collection/finrag_hr/: storage.sqlite
.qdrant_local/collection/finrag_marketing/: storage.sqlite
data/_metadata/: metadata.yaml
gateway/: app.py
ingest/: embed.py  loaders.py  run_ingest.py  splitters.py
mcp_server/: server.py
mcp_server/policies/: rbac.yaml
ui/: app.py
vectorstore/: qdrant_init.py
